tests/snapshots/run_wpt_conformance__trtx_reduceSum_float16_1D_tensor_all_negative_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum.https.any.js",
    "reduceSum float16 1D tensor all negative default options",
    "trtx",
    "PASS",
)
